Fixed the mobile view alignmnet issue in feedback page.

--- a/app/styles/app-rwd/controllers/student/class/_class-activities.scss
+++ b/app/styles/app-rwd/controllers/student/class/_class-activities.scss
@@ -35,8 +35,6 @@
           }
 
           .ca-panel-container {
-            grid-template-columns: unset;
-
             .dca-panel-actions-performance {
               width: 60px;
               margin: 0 0 0 auto;
